Improved contrast between background and text, fix eambedded spotify and youtube responsiveness, add responsive logo on landingpage, add small logo on nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,13 +33,27 @@ header{
 .navbar-nav {
     display: inline;
 }
-/*-----------------landing-page*/
+.nav-logo{
+    height: 50px;
+    width: 70px;
+}
+
 body {
     background: url('../images/blackwhite.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+/*-----------------landing-page*/
+.big-logo {
+    padding-bottom: 100px;
+    max-width: 800px;
+    height: auto;
+    width:80vw;
+}
+.logo-box {
+    text-align: center;
 }
 
 /*-----------------Footer*/
@@ -72,6 +86,7 @@ padding: 10px 10px;
 
 .band-member-box{
     text-align: center;
+    padding-top: 20px;
 }
 
 .about-band{
@@ -84,32 +99,8 @@ padding: 10px 10px;
  }
 /*-----------------media*/
 
-.video-container{
-    overflow: hidden;
-    position: relative;
-    padding-top: 50%; 
-}
 
-.video-container iframe{
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    position: absolute;
-}
-
-.spotify-container{
-    overflow: hidden;
-    position: relative;
-    padding-top: 50%; 
-    max-height: 300px;
-}
-
-.spotify-container iframe{
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    position: absolute;
-    max-height: 300px;
+.spotify {
+    max-height: 350px;
+    margin-top: 50px;
 }
